--- a/shopmanager/shopapp/weixin/templates/weixin/gift.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/gift.html
@@ -10,34 +10,24 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:#e8792a">十一月 感恩季</div>
     <div class="panel-body">
-      <p style="color:#029fd6">请为您的好友挑选感恩礼物吧！限选一款哦：）</p>
+      <p style="color:#029fd6">快为好友挑选礼物吧！您选咱就送，<font style="color:red">[免费+包邮]</font>哦！</p>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择一：卡通吸汗巾 (12个款式)</h5>{% csrf_token %}
+	  <h5 id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择一：卡通吸汗巾</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
-	<div class="col-xs-4" style="text-align:center;">
+	<div class="col-xs-12">
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5Gu2cAGfTzibdTRPBZVNXmwfPd5D1PROpVkGibNQ6wjg03H9LdZaKNKwhjw/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuXPfse8KAYdoZmxqK4j70EZxDuiaB4SvyeHz0Em1DIMEtrjrRvCvnqOw/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuXPfse8KAYdoZmxqK4j70EZxDuiaB4SvyeHz0Em1DIMEtrjrRvCvnqOw/0"/>	    
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNrK541Vd6eH9ewY4ib6oYnKBxbMOIsUphvaMeTCljia3TM6DLq6HbmJ6w/0">
 	  </a>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择二：秋冬纯棉厚款毛巾袜</h5>{% csrf_token %}
+	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择二：纯棉厚款毛巾袜（2双装）</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
