--- a/shopmanager/shopapp/weixin/templates/weixin/gift.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/gift.html
@@ -27,73 +27,56 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择二：纯棉厚款毛巾袜（2双装）</h5>{% csrf_token %}
+	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择二：纯棉厚款不勒脚毛巾袜（2双装）</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
-	<div class="col-xs-4" style="text-align:center;">
+	<div class="col-xs-12" style="text-align:center;">
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5Guts5wjEtI6tibQLodubENOA1x364ibNoYC440h0mViaYvhYRWptdOc6aCw/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuichMJ2Uwrh4TiaZQqp75gdv4TJbRQezEk3Avq0NespFQ8Gmg1ErOiaicBQ/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuWryTypL0Qn6MzfoxvackG0BpCkrP6AiaE34OccoykHaAMuuG3N2ovag/0"/>	    
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0"/>
 	  </a>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p3" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择三：婴幼儿防PM2.5卡通口罩</h5>{% csrf_token %}
+	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择三：天鹅绒造型范儿三角巾</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
-	<div class="col-xs-4" style="text-align:center;">
+	<div class="col-xs-12" style="text-align:center;">
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5Gu4zonAXbJp6iaBluXLD52kQXpYVkJ1KpAKuFzVWIpTaqlZ7RKbq3JibdQ/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuhZshv3B3XAYIvr2pF7EouVafuBrl22maWIwAZsWxTIUclzgIRt6fUA/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GurQsIwKWMURddNUEpqwhr8BU7K7NEPIcPsaCNjKQd5wictylbYVlCoKg/0"/>	    
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNcPbGkJsfmvDD9CTqF8sK76NWCzbAvKJL9BELT383CRh0SqRvbnhRCw/0"/>
 	  </a>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p4" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择四：时尚针织三角巾</h5>{% csrf_token %}
+	  <h5 id="id_p3" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择四：婴幼儿防PM2.5卡通口罩</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
-	<div class="col-xs-4" style="text-align:center;">
+	<div class="col-xs-12" style="text-align:center;">
 	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5Gu1bHvrlg1ibwHY7CBnf2WmWkrUicPndy6R1fFZYwzyNKwHNAlCa35RpjQ/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5Gu641zkHNdpQR78gQUJoYCa45b8pRTn5K51f8LBypXialACJayk5jxDPg/0"/>
-	  </a>
-	</div>
-	<div class="col-xs-4" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvXic8acrqDl4mC6c1wQH5GuZm0rGvmdH8342sEehia5Lic1pDAWZRgicBY0mOoskwjRYibrSWJd6tfNHw/0"/>	    
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNSsFhXjOnUjbonibpY7NPgLgzKzDicpp0z1BpicpRiboryib1qAj0WfO8ffA/0"/>
 	  </a>
 	</div>
       </div>
 
+      <div class="row">
+	<div class="col-xs-12">
+	  <h5 id="id_p4" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择五：时尚针织三角巾</h5>{% csrf_token %}
+	</div>
+      </div>
+
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center;">
+	  <a href="#" class="thumbnail">
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaN65ibd1I6w8ZcSGMsC51BmFfVmjE6E12SqyNb56txgeKb7r4YyvWsia4A/0"/>
+	  </a>
+	</div>
+      </div>
 
       <div class="row">
 	<div class="col-xs-12" style="text-align:center" id="id_msg">
