--- a/shopmanager/shopapp/weixin/templates/weixin/gift.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/gift.html
@@ -14,69 +14,87 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择一：卡通吸汗巾</h5>{% csrf_token %}
+	  <h5 id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="1" id="id_input1"> 选择一：天猫No.1 卡通吸汗巾</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
 	<div class="col-xs-12">
-	  <a href="#" class="thumbnail">
+	  <div class="thumbnail">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNrK541Vd6eH9ewY4ib6oYnKBxbMOIsUphvaMeTCljia3TM6DLq6HbmJ6w/0">
-	  </a>
+	  </div>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择二：纯棉厚款不勒脚毛巾袜（2双装）</h5>{% csrf_token %}
+	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="2" id="id_input2"> 选择二：天鹅绒 时尚造型三角巾</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center;">
-	  <a href="#" class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0"/>
-	  </a>
-	</div>
-      </div>
-
-      <div class="row">
-	<div class="col-xs-12">
-	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择三：天鹅绒造型范儿三角巾</h5>{% csrf_token %}
-	</div>
-      </div>
-      <div class="row">
-	<div class="col-xs-12" style="text-align:center;">
-	  <a href="#" class="thumbnail">
+	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNcPbGkJsfmvDD9CTqF8sK76NWCzbAvKJL9BELT383CRh0SqRvbnhRCw/0"/>
-	  </a>
+	  </div>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p3" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择四：婴幼儿防PM2.5卡通口罩</h5>{% csrf_token %}
+	  <h5 id="id_p3" style="color:#029fd6"><input type="radio" name="p1" value="3" id="id_input3"> 选择三：纯棉不勒脚 毛巾袜（2双装）</h5>{% csrf_token %}
 	</div>
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center;">
-	  <a href="#" class="thumbnail">
+	  <div class="thumbnail">
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0"/>
+	  </div>
+	</div>
+      </div>
+
+
+      <div class="row">
+	<div class="col-xs-12">
+	  <h5 id="id_p4" style="color:#029fd6"><input type="radio" name="p1" value="4" id="id_input4"> 选择四：婴幼儿防PM2.5卡通口罩</h5>{% csrf_token %}
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center;">
+	  <div class="thumbnail">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNSsFhXjOnUjbonibpY7NPgLgzKzDicpp0z1BpicpRiboryib1qAj0WfO8ffA/0"/>
-	  </a>
+	  </div>
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p4" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input1"> 选择五：时尚针织三角巾</h5>{% csrf_token %}
+	  <h5 id="id_p5" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input5"> 选择五：时尚针织三角巾</h5>{% csrf_token %}
 	</div>
       </div>
 
       <div class="row">
 	<div class="col-xs-12" style="text-align:center;">
-	  <a href="#" class="thumbnail">
+	  <div class="thumbnail">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaN65ibd1I6w8ZcSGMsC51BmFfVmjE6E12SqyNb56txgeKb7r4YyvWsia4A/0"/>
-	  </a>
+	  </div>
 	</div>
       </div>
+
+      <div class="row">
+	<div class="col-xs-12">
+	  <h5 id="id_p6" style="color:#029fd6"><input type="radio" name="p1" value="6" id="id_input6"> 选择六：纯棉卡通三角裤</h5>{% csrf_token %}
+	</div>
+      </div>
+
+      <div class="row">
+	<div class="col-xs-12" style="text-align:center;">
+	  <div class="thumbnail">
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNNlbUNRD9SvSafDqaFick0naAmRnlhgm3kcnVLRq1uyJoL19Yu06eIGQ/0"/>
+	  </div>
+	</div>
+      </div>
+
+
+
 
       <div class="row">
 	<div class="col-xs-12" style="text-align:center" id="id_msg">
@@ -100,49 +118,18 @@
 
 {% block tail_script %}
 <script type="text/javascript">
-  $("#id_p1").on("click", function () {
-  $("#id_input1").attr("checked",true);
-  $("#id_input2").attr("checked",false);
-  $("#id_input3").attr("checked",false);
-  $("#id_input4").attr("checked",false);
-  $("#id_p1").css("color","#ed5377");
-  $("#id_p2").css("color","#029fd6");  
-  $("#id_p3").css("color","#029fd6");  
-  $("#id_p4").css("color","#029fd6");  
+  {% for i in 123456|make_list %}
+  $("#id_p{{ i }}").on("click", function () {
+      $("#id_input{{ i }}").attr("checked",true);
+      $("#id_p{{ i }}").css("color","#ed5377");
+    {% for j in 123456|make_list %}
+      {% if i != j %}
+      $("#id_input{{ j }}").attr("checked",false);
+      $("#id_p{{ j }}").css("color","#029fd6");  
+      {% endif %}
+    {% endfor %}
   });
-
-  $("#id_p2").on("click", function () {
-  $("#id_input1").attr("checked",false);
-  $("#id_input2").attr("checked",true);
-  $("#id_input3").attr("checked",false);
-  $("#id_input4").attr("checked",false);
-  $("#id_p1").css("color","#029fd6");  
-  $("#id_p2").css("color","#ed5377");
-  $("#id_p3").css("color","#029fd6");  
-  $("#id_p4").css("color","#029fd6");  
-  });
-
-  $("#id_p3").on("click", function () {
-  $("#id_input1").attr("checked",false);
-  $("#id_input2").attr("checked",false);
-  $("#id_input3").attr("checked",true);
-  $("#id_input4").attr("checked",false);
-  $("#id_p1").css("color","#029fd6");  
-  $("#id_p2").css("color","#029fd6");
-  $("#id_p3").css("color","#ed5377");  
-  $("#id_p4").css("color","#029fd6");  
-  });
-
-  $("#id_p4").on("click", function () {
-  $("#id_input1").attr("checked",false);
-  $("#id_input2").attr("checked",false);
-  $("#id_input3").attr("checked",false);
-  $("#id_input4").attr("checked",true);
-  $("#id_p1").css("color","#029fd6");  
-  $("#id_p2").css("color","#029fd6");
-  $("#id_p3").css("color","#029fd6");  
-  $("#id_p4").css("color","#ed5377");  
-  });
+  {% endfor %}
 
   function checkSelection() {
     if ((!$("#id_input1").is(':checked')) && (!$("#id_input2").is(':checked'))) {
