--- a/shopmanager/shopapp/weixin/templates/weixin/gift.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/gift.html
@@ -11,15 +11,16 @@
     <div class="panel-heading" style="color:#e8792a">十一月 感恩季</div>
     <div class="panel-body">
       <p style="color:#029fd6">快为好友挑选礼物吧！您选咱就送，<font style="color:red">[免费+包邮]</font>哦！</p>
-
+      <form action="/weixin/gift/" method="post" onsubmit="return checkSelection()">{% csrf_token %}
+	<input type="hidden" value="" id="id_selection" name="selection">
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p1" style="color:#029fd6"><input type="radio" name="p1" value="1" id="id_input1"> 选择一：天猫No.1 卡通吸汗巾</h5>{% csrf_token %}
+	  <h5 id="id_p1" style="color:#029fd6">选择一：天猫No.1 卡通吸汗巾</h5>
 	</div>
       </div>
-      <div class="row" id="id_i1">
+      <div class="row">
 	<div class="col-xs-12">
-	  <div class="thumbnail">
+	  <div class="thumbnail" style="padding:3px" id="id_i1">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNrK541Vd6eH9ewY4ib6oYnKBxbMOIsUphvaMeTCljia3TM6DLq6HbmJ6w/0">
 	  </div>
 	</div>
@@ -27,12 +28,12 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p2" style="color:#029fd6"><input type="radio" name="p1" value="2" id="id_input2"> 选择二：天鹅绒 时尚造型三角巾</h5>{% csrf_token %}
+	  <h5 id="id_p2" style="color:#029fd6">选择二：天鹅绒 时尚造型三角巾</h5>
 	</div>
       </div>
-      <div class="row" id="id_i2">
+      <div class="row">
 	<div class="col-xs-12" style="text-align:center;">
-	  <div class="thumbnail">
+	  <div class="thumbnail" style="padding:3px" id="id_i2">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNcPbGkJsfmvDD9CTqF8sK76NWCzbAvKJL9BELT383CRh0SqRvbnhRCw/0"/>
 	  </div>
 	</div>
@@ -40,12 +41,12 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p3" style="color:#029fd6"><input type="radio" name="p1" value="3" id="id_input3"> 选择三：纯棉不勒脚 毛巾袜（2双装）</h5>{% csrf_token %}
+	  <h5 id="id_p3" style="color:#029fd6">选择三：纯棉不勒脚 毛巾袜（2双装）</h5>
 	</div>
       </div>
-      <div class="row" id="id_i3">
+      <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
-	  <div class="thumbnail">
+	  <div class="thumbnail" style="padding:3px" id="id_i3">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0"/>
 	  </div>
 	</div>
@@ -54,12 +55,12 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p4" style="color:#029fd6"><input type="radio" name="p1" value="4" id="id_input4"> 选择四：婴幼儿防PM2.5卡通口罩</h5>{% csrf_token %}
+	  <h5 id="id_p4" style="color:#029fd6">选择四：婴幼儿防PM2.5卡通口罩</h5>
 	</div>
       </div>
-      <div class="row" id="id_i4">
+      <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
-	  <div class="thumbnail">
+	  <div class="thumbnail" style="padding:3px" id="id_i4">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNSsFhXjOnUjbonibpY7NPgLgzKzDicpp0z1BpicpRiboryib1qAj0WfO8ffA/0"/>
 	  </div>
 	</div>
@@ -67,13 +68,13 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p5" style="color:#029fd6"><input type="radio" name="p1" value="5" id="id_input5"> 选择五：时尚针织三角巾</h5>{% csrf_token %}
+	  <h5 id="id_p5" style="color:#029fd6">选择五：时尚针织三角巾</h5>
 	</div>
       </div>
 
-      <div class="row" id="id_i5">
+      <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
-	  <div class="thumbnail">
+	  <div class="thumbnail" style="padding:3px" id="id_i5">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaN65ibd1I6w8ZcSGMsC51BmFfVmjE6E12SqyNb56txgeKb7r4YyvWsia4A/0"/>
 	  </div>
 	</div>
@@ -81,32 +82,25 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <h5 id="id_p6" style="color:#029fd6"><input type="radio" name="p1" value="6" id="id_input6"> 选择六：纯棉卡通三角裤</h5>{% csrf_token %}
+	  <h5 id="id_p6" style="color:#029fd6">选择六：纯棉卡通三角裤</h5>
 	</div>
       </div>
 
-      <div class="row" id="id_i6">
+      <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
-	  <div class="thumbnail">
+	  <div class="thumbnail" style="padding:3px" id="id_i6">
 	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNNlbUNRD9SvSafDqaFick0naAmRnlhgm3kcnVLRq1uyJoL19Yu06eIGQ/0"/>
 	  </div>
 	</div>
       </div>
 
       <div class="row">
-	<div class="col-xs-12" style="text-align:center" id="id_msg">
-	  {% if exist %}
-	  <p style='color:#029fd6'>亲，您的选择已经提交！快告诉朋友，让他们也来投票吧！</p>
-	  {% else %}
-	  <!--
-	  <button type="button" class="btn btn-warning" id="id_submit" onclick="submit();">投票提交</button>
-	  -->
-	  <p style="color:red">礼物不断增加中，敬请期待。。。</p>
-	  {% endif %}
+	<div class="col-xs-12" style="text-align:center">
+	  <p style="color:red" id="id_msg"></p>
+	  <button type="submit" class="btn btn-warning" id="id_submit">确定提交</button>
 	</div>
       </div>
-      
-
+      </form>
     </div>
   </div>
 </div>
@@ -117,51 +111,27 @@
 <script type="text/javascript">
   {% for i in 123456|make_list %}
   $("#id_p{{ i }},#id_i{{ i }}").on("click", function () {
-      $("#id_input{{ i }}").attr("checked",true);
+      $("#id_i{{ i }}").css("background-color","#ed5377");
       $("#id_p{{ i }}").css("color","#ed5377");
+      $("#id_selection").val("{{ i }}");
     {% for j in 123456|make_list %}
       {% if i != j %}
-      $("#id_input{{ j }}").attr("checked",false);
+      $("#id_i{{ j }}").css("background-color","");
       $("#id_p{{ j }}").css("color","#029fd6");  
       {% endif %}
     {% endfor %}
+
   });
   {% endfor %}
 
   function checkSelection() {
-    if ((!$("#id_input1").is(':checked')) && (!$("#id_input2").is(':checked'))) {
-      $("#id_msg")[0].innerHTML = "<p style='color:red'>亲，麻烦选择下答案再提交哦。</p>";
+    if ($("#id_selection").val() == "") {
+      $("#id_msg")[0].innerHTML = "<p style='color:red'>亲，请先选择礼物再提交！</p>";
       return false;
     }
     return true;
   }
 
-  function submit() {
-    if (checkSelection() == false) {
-      return;
-    }
-  
-    var selection = 0;
-    if ($("#id_input1").is(':checked')) {
-      selection = 5;
-    }
-    if ($("#id_input2").is(':checked')) {
-      selection = 6;
-    }
-
-    var url = "/weixin/survey/";
-    var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-    
-    var data = {"selection": selection, "csrfmiddlewaretoken":csrf_token};
-    var callback = function (res) {
-      console.log(res);
-    if (res["code"] == "ok") {
-      $("#id_msg")[0].innerHTML = "<p style='color:red'>亲，您的选择已经提交！感谢！</p>";
-      $("#id_submit").css("display","none");
-    }
-    };
-    $.ajax({url:url, data:data, type:"post", success:callback});
-  }
 </script>
 
 {% endblock %}
