--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -22,7 +22,7 @@
       </div>
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-          <p><a href="/weixin/gift/" class="btn btn-warning">立即发礼包 >></a></p>
+          <p><a href="/weixin/sales/award/notify/" class="btn btn-warning">立即发礼包 >></a></p>
         </div>
       </div>
     </div>
