--- a/shopmanager/shopapp/weixin_sales/templates/weixin/sales/gift.html
+++ b/shopmanager/shopapp/weixin_sales/templates/weixin/sales/gift.html
@@ -97,7 +97,7 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <p style="color:red" id="id_msg"></p>
-	  <button type="submit" class="btn btn-warning" id="id_submit">确定提交</button>
+	  <!--<button type="submit" class="btn btn-warning" id="id_submit">确定提交</button>-->
 	</div>
       </div>
       </form>
