--- a/shopmanager/shopapp/weixin_sales/templates/weixin/sales/gift.html
+++ b/shopmanager/shopapp/weixin_sales/templates/weixin/sales/gift.html
@@ -52,7 +52,6 @@
 	</div>
       </div>
 
-
       <div class="row">
 	<div class="col-xs-12">
 	  <h5 id="id_p4" style="color:#029fd6">选择四：婴幼儿防PM2.5卡通口罩</h5>
@@ -97,7 +96,9 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <p style="color:red" id="id_msg"></p>
-	  <!--<button type="submit" class="btn btn-warning" id="id_submit">确定提交</button>-->
+	  {% if user_openid == 'oMt59uE55lLOV2KS6vYZ_d0dOl5c' %}
+	  <button type="submit" class="btn btn-warning" id="id_submit">确定提交</button>
+	  {% endif %}
 	</div>
       </div>
       </form>
