--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -23,7 +23,7 @@
 	{% endfor %}
 	</div>
       </div>
-      <div class="row">
+      <div class="row" style="margin-top:15px">
 	<div class="col-xs-12">
 	  <p>十一月 感恩季</p>
 	  <p>为我们的友情 感谢您</p>
