--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -28,7 +28,7 @@
 	  <p>十一月 感恩季</p>
 	  <p>为我们的友情 感谢您</p>
 	  <p>特别感谢 您曾使用我的F码</p>
-	  <p>在优尼世界 我为您准备了一个精美的感恩礼包</p>
+	  <p>在优尼世界 我为您准备了一份感恩礼物</p>
 	  <p>请一定打开 让我放心您已收到</p>
 	  <p style="color:#d9534f">-- {{ nickname }} 2014.11.05</p>
 	</div>
@@ -40,7 +40,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <h4 style="color:#d9534f">礼包都有啥东东呢？</h4>
-	  <p>亲，您的感恩礼包至少含下面<font style="color:#d9534f;font-size:20px">2份</font>精美礼品：</p>
+	  <p>亲，您的礼包至少含下面<font style="color:#d9534f;font-size:20px">2份</font>精美礼品：</p>
 	  <ul class="list-group">
 	    <li class="list-group-item">1. 优尼世界 双十一满199减50优惠券 全场通用</li>
 	    <li class="list-group-item">2. 天猫No.1 卡通吸汗巾</li>
