--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -12,37 +12,107 @@
       <div class="row">
 	<div class="col-xs-12">
           <p style="color:red">感恩他人，就是善待自己。</p>
+	  {% if referal_images|length > 0 %}
           <p>亲，有<font style="color:orange;font-size:20px">{{ referal_images|length }}</font>位好友在期盼您的感恩礼包！</p>
           <p>
             {% for images in referal_images %}
             <img src="{{ images }}" width="20px" height="20px"/>
             {% endfor %}
           </p>
+	  {% else %}
+	  <p style="color:orange">亲，还没有人使用您的F吗哦。</p>
+	  <p style="color:red">把F码分享给好友，您就可以给她发感恩礼包啦！</p>
+	  {% endif %}
         </div>
       </div>
+      {% if referal_images|length > 0 %}
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
+	  {% if is_share %}
+	  <p style="color:#d9534f">您已完成感恩礼包发送。记得让好友来领！</p>
+	  {% else %}
           <p><a href="/weixin/sales/award/notify/" class="btn btn-warning">立即发礼包 >></a></p>
+	  {% endif %}
         </div>
       </div>
+      {% endif %}
     </div>
   </div>
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">我收到的礼包</div>
     <div class="panel-body">
-    {% csrf_token %}
+      {% csrf_token %}
       <div style="height:166px;padding-top:20px;text-align:center;">
-        {% if parent_award and parent_award.remind_time > wx_user.created %}                                                                                                                                                                            
-        <p>您的好友 xx 给您发了一个感恩礼包，快打开看看吧！</p>                                                                                                                           
-        <a type="button" class="btn btn-danger" href="">打开礼包 &gt;&gt;</a>                                                                                                                               
-        {% elif parent_award %}
-        <p>亲，好友已经被提醒了，礼包马上就会收到了！</p>
+	{% if parent_award and parent_award.is_share %} 
+        <p>您的好友 [{{ parent_nickname }}] 给您发了一个感恩礼包，快打开看看吧！</p>
+        <button class="btn btn-danger" onclick="unpack()">打开礼包 &gt;&gt;</button>
+        {% elif parent_award and parent_award.remind_count > 0 %}
+        <p>亲，我们已经用短信提醒您的好友，感谢您耐心等待！</p>
         {% else %}
-        <p id="id-remind-msg" style="color:red">亲，好友还未给您发送感恩礼包哦，快提醒下她吧！</p>
+        <p id="id-remind-msg" style="color:red">亲，好友 {{ parent_nickname }} 还未给您发送感恩礼包哦，快提醒下她吧！</p>
         <button id="id-remind" type="button" class="btn btn-danger" onclick="remind()">点击发送提醒 &gt;&gt;</button>
         {% endif %}
       </div>
+      {% if parent_award and parent_award.is_share %}
+      <div class="row" id="id_award" style="display:">
+	<div class="col-xs-12">
+	  <p>您的礼包含有：</p>
+	  <ul class="list-group">
+	    <li class="list-group-item" >1. 优尼世界 双十一满199减50优惠券 全场通用</li>
+	    {% if parent_award.award_val == 1 %}
+	    <li class="list-group-item" id="id_parent_award" selection="1">2. 天猫No.1 卡通吸汗巾 (好友推荐)</li>
+	    {% endif %}
+	    {% if parent_award.award_val == 2 %}
+	    <li class="list-group-item" id="id_parent_award" selection="2">2. 天鹅绒 时尚造型三角巾</li>
+	    {% endif %}
+	    {% if parent_award.award_val == 3 %}
+	    <li class="list-group-item" id="id_parent_award" selection="3">2. 纯棉不勒脚 毛巾袜（2双装）</li>
+	    {% endif %}
+	    {% if parent_award.award_val == 4 %}
+	    <li class="list-group-item" id="id_parent_award" selection="4">2. 防雾霾PM2.5卡通口罩</li>
+	    {% endif %}
+	    {% if parent_award.award_val == 5 %}
+	    <li class="list-group-item" id="id_parent_award" selection="5">2. 时尚针织三角巾</li>
+	    {% endif %}
+	    {% if parent_award.award_val == 6 %}
+	    <li class="list-group-item" id="id_parent_award" selection="6">2. 纯棉卡通三角裤</li>
+	    {% endif %}
+	  </ul>
+	  
+	  <div class="thumbnail" id="id_i1" {% if parent_award.award_val == 1 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNrK541Vd6eH9ewY4ib6oYnKBxbMOIsUphvaMeTCljia3TM6DLq6HbmJ6w/0">
+	  </div>
+	  <div class="thumbnail" id="id_i2" {% if parent_award.award_val == 2 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNcPbGkJsfmvDD9CTqF8sK76NWCzbAvKJL9BELT383CRh0SqRvbnhRCw/0">
+	  </div>
+	  <div class="thumbnail" id="id_i3" {% if parent_award.award_val == 3 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0">
+	  </div>
+	  <div class="thumbnail" id="id_i4" {% if parent_award.award_val == 4 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNSsFhXjOnUjbonibpY7NPgLgzKzDicpp0z1BpicpRiboryib1qAj0WfO8ffA/0">
+	  </div>
+	  <div class="thumbnail" id="id_i5" {% if parent_award.award_val == 5 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaN65ibd1I6w8ZcSGMsC51BmFfVmjE6E12SqyNb56txgeKb7r4YyvWsia4A/0">
+	  </div>
+	  <div class="thumbnail" id="id_i6" {% if parent_award.award_val == 6 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNNlbUNRD9SvSafDqaFick0naAmRnlhgm3kcnVLRq1uyJoL19Yu06eIGQ/0">
+	  </div>
+
+	  <p>您也可自行选择与好友推荐不同的礼品：</p>
+	  <select class="form-control input-sm" name="selection" id="id_selection">
+	    <option value="0">选择</option>
+	    <option value="1">天猫No.1 卡通吸汗巾</option>
+	    <option value="2">天鹅绒 时尚造型三角巾</option>
+	    <option value="3">纯棉不勒脚 毛巾袜（2双装）</option>
+	    <option value="4">防雾霾PM2.5卡通口罩</option>
+	    <option value="5">时尚针织三角巾</option>
+	    <option value="6">纯棉卡通三角裤</option>
+	  </select>
+
+	</div>
+      </div>
+      {% endif %}
     </div>
   </div>
 
@@ -68,29 +138,36 @@
 {% block tail_script %}
 
 <script type="text/javascript">
-	
-  function unpack(){
-  
-  	var callback = function(res){
-  		console.log("award:",res);
-  	};
-  	
-  	var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-  	$.post("/weixin/sales/award/",{},callback,"json");
-  	
-  };
-  
+  $("#id_selection").change(
+    function () {
+      var val = $("#id_selection").val();
+      if (val > 0 && val < 7) {
+        var selection = $("#id_parent_award").attr("selection");
+        if (selection != val) {
+          $("#id_i"+selection).css("display","none");
+          $("#id_i"+val).css("display","block");
+          $("#id_parent_award").attr("selection",val);
+          $("#id_parent_award")[0].innerHTML = "2. " + $("#id_selection option:selected").text() + " (自选)"
+        }
+      }
+    }
+  );
+
+  function unpack() {
+    console.log("unpack");
+  }
+
   function remind() {
-  	var callback = function(res){
-  		if (res.success){
-  			$("#id-remind").css("display","none");
-    		$("#id-remind-msg")[0].innerHTML = "我们将尽快用短信通知您的好友，告诉她您在等待。感谢您的耐心！";
-  		}else{
-  			$("#id-remind-msg")[0].innerHTML = res.err_msg;
-  		}
-  	};
-  	
-  	$.post("/weixin/sales/award/notify/",{"csrfmiddlewaretoken":csrf_token},callback,"json");
+    var callback = function(res){
+      if (res.success){
+        $("#id-remind").css("display","none");
+        $("#id-remind-msg")[0].innerHTML = "我们将尽快用短信通知您的好友，告诉她您在等待。感谢您的耐心！";
+      }else{
+        $("#id-remind-msg")[0].innerHTML = res.err_msg;
+      }
+    };
+    var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+    $.post("/weixin/sales/award/remind/",{"csrfmiddlewaretoken":csrf_token},callback,"json");
   };
 </script>
 
