--- a/shopmanager/shopapp/weixin_sales/templates/weixin/sales/gift.html
+++ b/shopmanager/shopapp/weixin_sales/templates/weixin/sales/gift.html
@@ -21,7 +21,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <div class="thumbnail" style="padding:3px" id="id_i1">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNrK541Vd6eH9ewY4ib6oYnKBxbMOIsUphvaMeTCljia3TM6DLq6HbmJ6w/0">
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaL2PT8NunDm0QuwY0f3jZdzL4W2MXbOWodNrvDLqtSytTuxQ7mjkHiaGA/0">
 	  </div>
 	</div>
       </div>
@@ -34,7 +34,7 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center;">
 	  <div class="thumbnail" style="padding:3px" id="id_i2">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNcPbGkJsfmvDD9CTqF8sK76NWCzbAvKJL9BELT383CRh0SqRvbnhRCw/0"/>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLN160Swld40Se6S4M1B2Eu4Ge1lFkBLNhblicfM0z63oceSYhmghSvHA/0"/>
 	  </div>
 	</div>
       </div>
@@ -47,7 +47,7 @@
       <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
 	  <div class="thumbnail" style="padding:3px" id="id_i3">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0"/>
+	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLiaIehcUeMgaSicJzjr1E7vNkkkIRV7oBOaa8QtvAVfl4pbJ3fribtia2Vg/0"/>
 	  </div>
 	</div>
       </div>
@@ -60,7 +60,7 @@
       <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
 	  <div class="thumbnail" style="padding:3px" id="id_i4">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNSsFhXjOnUjbonibpY7NPgLgzKzDicpp0z1BpicpRiboryib1qAj0WfO8ffA/0"/>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLINLbNAiaqzCvXy0lb5mxpExonL6rdteicx7bazWdzViaJPia69E35l2raw/0"/>
 	  </div>
 	</div>
       </div>
@@ -74,7 +74,7 @@
       <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
 	  <div class="thumbnail" style="padding:3px" id="id_i5">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaN65ibd1I6w8ZcSGMsC51BmFfVmjE6E12SqyNb56txgeKb7r4YyvWsia4A/0"/>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLQk8ZCJQciaD7hNMR4zQRWDhtUP2RRmVfAJiaypTianqTnGh1LznclxoVw/0"/>
 	  </div>
 	</div>
       </div>
@@ -88,7 +88,7 @@
       <div class="row" >
 	<div class="col-xs-12" style="text-align:center;">
 	  <div class="thumbnail" style="padding:3px" id="id_i6">
-	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNNlbUNRD9SvSafDqaFick0naAmRnlhgm3kcnVLRq1uyJoL19Yu06eIGQ/0"/>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLdVg66clrLXM6rO34qYPpcBI0sKicjYwgrMjTPpgaxqrh89oEmz4D0yA/0"/>
 	  </div>
 	</div>
       </div>
@@ -96,7 +96,9 @@
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
 	  <p style="color:red" id="id_msg"></p>
-	  {% if user_openid == 'oMt59uE55lLOV2KS6vYZ_d0dOl5c' %}
+	  {% if is_share %}
+	  <p>亲，您已完成了感恩礼包发送。一定要让好友来领取哦！</p>
+	  {% else %}
 	  <button type="submit" class="btn btn-warning" id="id_submit">确定提交</button>
 	  {% endif %}
 	</div>
@@ -130,6 +132,9 @@
       $("#id_msg")[0].innerHTML = "<p style='color:red'>亲，请先选择礼物再提交！</p>";
       return false;
     }
+    {% if is_share %}
+    if (1) return false;
+    {% endif %}
     return true;
   }
 
