--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -161,7 +161,7 @@
 <script type="text/javascript">  
 var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLRB3EMEibPzXZWs7XCPmBmqW8uzaCBBxYudU0PKYjmw0r7MOsoJ000\
 zg/0";
-var lineLink = "http://weixin.huyi.so/weixin/inviteresult/";
+var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
 var descContent = "十一月，感恩季。用我的一份感动，带给你一份惊喜。感谢有你！";
 var shareTitle = "小小礼物 感恩的心 感谢有你！";
 var appid = 'wxc2848fa1e1aa94b5';
