--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -14,13 +14,14 @@
     <p>曾经帮助过我们的人，还记得吗？</p>
     <p style="color:orange">不能抑制感恩的心，决定要送您一份礼物，感谢您曾经使用我的F码。</p>
     <p>感恩他人，就是善待自己。</p>
-    <a href="/weixin/inviteresult/">点击发送感恩礼包 >></a>
+    <a class="btn btn-danger" href="/weixin/inviteresult/">点击发送感恩礼包 >></a>
   </div>
 </div>
 
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:red">感恩礼包 免费包邮寄到家!</div>
   <div class="panel-body">
+    <p>如果您从未用过他人F码，现在也不晚。(马上开放。。。)</p>
     <p style="color:#d9534f">请选择您中意的礼品：</p>
     <div class="row">
       <div class="col-xs-12" style="text-align:center">
