--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -54,7 +54,7 @@
         <p id="id-remind-msg" style="color:red">亲，好友 {{ parent_nickname }} 还未给您发送感恩礼包哦，快提醒下她吧！</p>
         <button id="id-remind" type="button" class="btn btn-danger" onclick="remind()">点击发送提醒 &gt;&gt;</button>
 	{% else %}
-	<p id="id-remind-msg" style="color:red">亲，您还未使用过任何人的F码。用好友F码立即申请，即可得到感恩礼包！</p>
+	<p id="id-remind-msg" style="color:red">亲，您还未使用过任何人的F码。用好友F码立即申请，即可得到感恩礼包！<a href="/weixin/freesamples/">立即申请 >></a></p>
         {% endif %}
       </div>
       </div>
