--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -65,7 +65,7 @@
 	<div class="row">
 	  <div class="col-xs-6">
 	    <div class="thumbnail">
-	      <img style="width:100%" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLKgbibibRvEcbiax61bchOUpyTFzP8qNGPUF6JSHQ3YOysrtfFOLj8tCqg/0"> 
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLKgbibibRvEcbiax61bchOUpyTFzP8qNGPUF6JSHQ3YOysrtfFOLj8tCqg/0"> 
 	      <span style="font-size:10px">请复制右边链接到电脑或手机浏览器领取。</span>
 	    </div>
 	    
@@ -119,7 +119,7 @@
 	<p style="color:#d9534f">您也可选择不同的礼品：</p>
 	<div class="row">
 	  <div class="col-xs-12" style="text-align:center">
-	    <select class="form-control input-sm" name="selection" id="id_selection" style="width:80%;">
+	    <select class="form-control input-sm" name="selection" id="id_selection">
 	      <option value="0">选择</option>
 	      <option value="1">天猫No.1 卡通吸汗巾</option>
 	      <option value="2">天鹅绒 时尚造型三角巾</option>
@@ -134,7 +134,7 @@
 	<div class="row">
 	  <div class="col-xs-6">
 	    <div class="thumbnail">
-	      <img width="100%" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLqTM5mriaRVLuLR5LotjM9ks6OL1icCoED9qHibN7XGOzdLemSFqIfWwYw/0">
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLqTM5mriaRVLuLR5LotjM9ks6OL1icCoED9qHibN7XGOzdLemSFqIfWwYw/0">
 	      <span style="font-size:10px">请复制右边链接到电脑或手机浏览器领取。</span>
 	    </div>
 	  </div>
