--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -21,7 +21,7 @@
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:red">感恩礼包 免费包邮寄到家!</div>
   <div class="panel-body">
-    <p>如果您从未用过他人F码，现在也不晚。(马上开放。。。)</p>
+    <p>如果您从未用过他人F码，现在也不晚。马上开始申请吧！</p>
     <p style="color:#d9534f">请选择您中意的礼品：</p>
     <form action="/weixin/sales/award/apply/" method="post" onsubmit="return check()">{% csrf_token %}
     <div class="row">
